[project]
name = "puzzle15"
version = "1.0.0"
description = "Lib to make NxM - 1 sliding puzzles"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
